# CPP

Diffuse and Specular Shading/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Diffuse and Specular Shading/include/: albedo_base.h  camera.h  customException.h  directionalLightsource.h  geometry.h  intersectionPoint.h  interval.h  mat2d.h  mat3d.h  material.h  obj.detail.h  obj.h  reflectanceComponent.h  textureProjection_base.h  transformation3d.h  triangleMesh.h  vec2d.h
Diffuse and Specular Shading/src/: color.cpp  diffuse.cpp  intersectionPoint.cpp  interval.cpp  obj.cpp  phong.cpp  textureProjection_base.cpp  triangle.cpp  triangleMesh.cpp  vec3d.cpp
Ray Tracing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Ray Tracing/include/: color.h  constants.h  image.h  triangle.h  vec3d.h
Ray Tracing/src/: camera.cpp  image.cpp  mat2d.cpp  mat3d.cpp  transformation3d.cpp  triangle.cpp
Vector Operations/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw1  test
Vector Operations/src/: vec3d.cpp
Vector Transformations/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmakeclean.sh
Vector Transformations/include/: boundingbox.h  brdf_base.h  constantAlbedo.h  diffuse.h  intersectionPoint.h  lightsource_base.h  phong.h  ray.h  rotation3d.h  rotationX3d.h  rotationY3d.h  rotationZ3d.h  scale3d.h  sceneGraphNode.h  sceneGraphObject.h  sceneGraph_base.h  translation3d.h
Vector Transformations/src/: boundingbox.cpp  constantAlbedo.cpp  diffuse.cpp  directionalLightsource.cpp  geometry.cpp  material.cpp  (+14 more)
